[package]
name = "sm"
edition = "2021"
version= "0.1.0"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = ""
homepage = "https://crates.io/crates/sm"
repository = "https://github.com/rsuu/sm"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = []
keywords = []

#[lib]
#crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
strip = true

#[profile.release.package."*"]
#opt-level = 2
#codegen-units = 1
#debug = false
#debug-assertions = false
#incremental = false
#strip = true

[dependencies]
anyhow = "1.0.75"
esyn = "0.5.1"
futures-lite = "1.13.0"
pico-args = "0.5.0"
tempfile = "3.8.0"
xshell = "0.2.5"

[features]
